Mon Jun 17 15:24:10 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* features/code_check/W0704.feature : Add scenario to reproduce a parse
	  error when the enumerator name is conflicting with the prior typedef
	  name.
	* MANIFEST : Ditto.

	* lib/adlint/cc1/lexer.rb : Rewrite identifier set to track declared
	  identifiers in preparation for fixing incomplete identifier to
	  typedef name translation.

	* lib/adlint/cc1/parser.y : Fix incomplete identifier to typedef name
	  translation when the declaring enumerator name is conflicting with
	  the prior typedef name.

Thu Jun 13 15:53:21 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/cc1/interp.rb : Remove unnecessary controlling expression
	  evaluation at entering a do-statement.

	* features/code_check/W9001.feature : Add scenario to reproduce
	  false-positive of W9001 code check about body of the one-shot
	  do-statement.

Thu Jun 13 13:42:24 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/cc1/domain.rb : Fix bad bitwise & evaluation with
	  indefinite value domains.

	* features/code_check/W0612.feature : Add scenario to reproduce
	  false-positive of W0612 code check when value of an operand is
	  indefinite.  
	* MANIFEST : Ditto.

Wed Jun 12 19:57:55 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/cc1/syntax.rb : Fix controlling-expression deduction of
	  iteration-statements in order to adopt the ordinary expression when
	  no control breaking condition is found in the iteration body.

	* features/code_check/W0422.feature : Add scenario to reproduce a known
	  bug.

Wed Jun 12 15:51:38 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/cc1/object.rb : Add missing value coercing in evaluation
	  of variable definition when the variable has already been declared.

Wed Jun 12 11:43:35 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* features/code_check/W0459.feature : Add scenario to reproduce a known
	  bug.
